# Oracle-AI

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  agent_params.json  deploy.sh  docker-compose.yml  market_params.json  oracle_params.json  run.sh  token_params.json
abi/: Cargo.toml
abi/src/: lib.rs
ai-agent/: Cargo.toml
ai-agent/src/: contract.rs  lib.rs  service.rs  state.rs
ai-oracle/: .env.example  README.md  oracle_service.py  requirements.txt
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AIChat.tsx  LiveFeed.tsx  MarketList.tsx  Stats.tsx
frontend/src/context/: LineraContext.tsx
market/: Cargo.toml
market/src/: contract.rs  lib.rs  service.rs  state.rs
oracle/: Cargo.toml
oracle/src/: contract.rs  lib.rs  service.rs  state.rs
token/: Cargo.toml
token/src/: contract.rs  lib.rs  service.rs  state.rs
