[package]
name = "ai-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
futures.workspace = true
linera-sdk.workspace = true
oracle-ai-abi.workspace = true
market = { path = "../market" }
token = { path = "../token" }
serde.workspace = true
thiserror.workspace = true

[[bin]]
name = "ai_agent_contract"
path = "src/contract.rs"

[[bin]]
name = "ai_agent_service"
path = "src/service.rs"
