[package]
name = "market"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-graphql.workspace = true
async-trait.workspace = true
futures.workspace = true
linera-sdk.workspace = true
oracle-ai-abi.workspace = true
token = { path = "../token" }
serde.workspace = true
bcs = "0.1.6"
thiserror.workspace = true

[[bin]]
name = "market_contract"
path = "src/contract.rs"

[[bin]]
name = "market_service"
path = "src/service.rs"
